<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/navigation_dashboard">

    <fragment
        android:id="@+id/navigation_dashboard"
        android:name="cn.ppqing.accountskeeper.ui.dashboard.DashboardFragment"
        android:label="@string/title_dashboard"
        tools:layout="@layout/fragment_dashboard" />

    <fragment
        android:id="@+id/navigation_list"
        android:name="cn.ppqing.accountskeeper.ui.list.ListFragment"
        android:label="@string/title_list"
        tools:layout="@layout/fragment_list" />

    <fragment
        android:id="@+id/navigation_chart"
        android:name="cn.ppqing.accountskeeper.ui.chart.ChartFragment"
        android:label="@string/title_chart"
        tools:layout="@layout/fragment_chart" />

    <fragment
        android:id="@+id/navigation_user"
        android:name="cn.ppqing.accountskeeper.ui.user.UserFragment"
        android:label="@string/title_user"
        tools:layout="@layout/fragment_user" />
</navigation>
