<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.list.ListFragment"
    android:orientation="vertical">

    <RadioGroup
        android:id="@+id/radio_group"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="center_horizontal">
        <RadioButton
            android:id="@+id/radio_default"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/radio_default"
            android:checked="true"/>
        <RadioButton
            android:id="@+id/radio_small_to_large"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/sort_small_to_large"/>
        <RadioButton
            android:id="@+id/radio_large_to_small"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/sort_large_to_small"/>
    </RadioGroup>
    <cn.ppqing.accountskeeper.ui.list.mRecyclerView
        android:id="@+id/recyclerview_list"
        android:layout_height="0dp"
        android:layout_width="match_parent"
        android:layout_weight="1"/>
</LinearLayout>