<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.user.UserFragment">

    <ImageView
        android:id="@+id/avatar"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:layout_marginTop="@dimen/activity_vertical_margin_large"
        android:src="@drawable/ic_person_black_24dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textview_username"
        android:layout_width="50sp"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/activity_horizontal_margin_large"
        android:layout_marginTop="@dimen/activity_vertical_margin_large"
        android:text="@string/username"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/avatar" />

    <EditText
        android:id="@+id/edittext_username"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="@dimen/activity_horizontal_margin_large"
        app:layout_constraintBaseline_toBaselineOf="@+id/textview_username"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        android:inputType="textPersonName"
        app:layout_constraintStart_toEndOf="@+id/textview_username" />

    <TextView
        android:id="@+id/textview_password"
        android:layout_width="50sp"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/activity_horizontal_margin_large"
        android:layout_marginTop="@dimen/activity_vertical_margin_large"
        android:text="@string/password"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textview_username" />

    <EditText
        android:id="@+id/edittext_password"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="@dimen/activity_horizontal_margin_large"
        android:inputType="textPassword"
        app:layout_constraintBaseline_toBaselineOf="@+id/textview_password"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toEndOf="@+id/textview_password" />

    <TextView
        android:id="@+id/textview_server"
        android:layout_width="50sp"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/activity_horizontal_margin_large"
        android:layout_marginTop="@dimen/activity_vertical_margin_large"
        android:text="@string/server"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textview_password" />

    <EditText
        android:id="@+id/edittext_server"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="@dimen/activity_horizontal_margin_large"
        app:layout_constraintBaseline_toBaselineOf="@+id/textview_server"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toEndOf="@+id/textview_server"
        android:inputType="textUri"/>

    <Button
        android:id="@+id/button_upload"
        android:text="@string/button_upload"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/activity_vertical_margin_large"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/textview_server"/>

    <Button
        android:id="@+id/button_download"
        android:text="@string/button_download"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/button_upload"
        android:layout_marginTop="@dimen/activity_vertical_margin_small" />

</androidx.constraintlayout.widget.ConstraintLayout>