<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical"
    android:padding="10dp"
    >
    <ImageView
        android:layout_width="match_parent"
        android:layout_height="100dp"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="20dp"
        />
    <androidx.constraintlayout.widget.ConstraintLayout

        android:layout_width="match_parent"
        android:layout_height="38dp"
        android:layout_marginTop="10dp">

        <TextView
            android:id="@+id/Date_text2"
            android:layout_width="50dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="8dp"
            android:layout_marginRight="120dp"
            android:text="@string/Date"
            android:textSize="18sp"
            app:layout_constraintRight_toLeftOf="@+id/hkd"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/Date"
            android:layout_width="150dp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="168dp"
            android:layout_marginTop="8dp"
            app:layout_constraintLeft_toRightOf="@+id/Date_text2"
            app:layout_constraintTop_toTopOf="parent" />
    </androidx.constraintlayout.widget.ConstraintLayout>
    <androidx.constraintlayout.widget.ConstraintLayout

        android:layout_width="match_parent"
        android:layout_height="38dp"
        android:layout_marginTop="10dp">

        <TextView
            android:id="@+id/cost"
            android:text="@string/Cost"
            android:layout_width="150dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="8dp"
            android:layout_marginRight="120dp"
            android:textSize="18sp"
            app:layout_constraintRight_toLeftOf="@+id/hkd"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <EditText
            android:id="@+id/cost_num"
            android:layout_width="140dp"
            android:layout_height="36dp"
            app:layout_constraintLeft_toRightOf="@+id/cost"
            app:layout_constraintTop_toTopOf="parent" />

        <ImageView
            android:id="@+id/cur"
            android:layout_width="38dp"
            android:layout_height="20dp"
            android:layout_marginTop="8dp"
            android:src="@drawable/hk"
            app:layout_constraintLeft_toRightOf="@+id/cost_num"
            app:layout_constraintTop_toTopOf="parent" />
    </androidx.constraintlayout.widget.ConstraintLayout>
    <androidx.constraintlayout.widget.ConstraintLayout

        android:layout_width="match_parent"
        android:layout_height="38dp"
        android:layout_marginTop="10dp">

        <TextView
            android:id="@+id/kind_text"
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginRight="120dp"
            android:text="@string/kind"
            android:textSize="18sp"
            app:layout_constraintRight_toLeftOf="@+id/hkd"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <Spinner
            android:id="@+id/type"
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="76dp"
            android:layout_marginTop="4dp"

            app:layout_constraintLeft_toRightOf="@+id/kind_text"
            app:layout_constraintTop_toTopOf="parent" />
    </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.constraintlayout.widget.ConstraintLayout

        android:layout_width="match_parent"
        android:layout_height="58dp"
        android:layout_marginTop="10dp">

        <TextView
            android:id="@+id/method_text"
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginRight="120dp"
            android:text="@string/payment"
            android:textSize="18sp"
            app:layout_constraintRight_toLeftOf="@+id/hkd"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <Spinner
            android:id="@+id/method"
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="76dp"
            android:layout_marginTop="16dp"

            app:layout_constraintLeft_toRightOf="@+id/method_text"
            app:layout_constraintTop_toTopOf="parent" />
    </androidx.constraintlayout.widget.ConstraintLayout>

    <EditText
        android:id="@+id/Remarks_text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/remark"
        android:maxLines="2"
        />
    <androidx.constraintlayout.widget.ConstraintLayout

        android:layout_width="match_parent"
        android:layout_height="58dp"
        android:layout_marginTop="10dp">

        <CheckBox
            android:id="@+id/check_hkd"
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="40dp"
            android:layout_marginTop="8dp"
            android:text="HKD"
            android:checked="true"
            android:onClick="onChecked"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <CheckBox
            android:id="@+id/check_cny"
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="244dp"
            android:layout_marginTop="8dp"
            android:text="CNY"
            android:onClick="onChecked"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

    </androidx.constraintlayout.widget.ConstraintLayout>

    <Button
        android:id="@+id/submit"
        android:text="@string/submit"
        android:layout_width="200dp"
        android:layout_height="50dp"
        android:layout_marginTop="50dp"
        android:layout_gravity="center_horizontal"
        android:onClick="Submit_Bills"/>
    <Button
        android:id="@+id/Cancel"
        android:text="@string/Cancel"
        android:layout_width="200dp"
        android:layout_height="50dp"
        android:layout_marginTop="50dp"
        android:layout_gravity="center_horizontal"
        android:onClick="Back"/>
</LinearLayout>