<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"

    android:id="@+id/dash_layout"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"

    android:orientation="vertical"
    android:padding="10dp"

   >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="272dp"
        android:background="@drawable/bg3"
        android:orientation="vertical">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp"
            android:text="Income and expenditure"
            android:textColor="#000000"
            android:gravity="right"/>

        <TextView
            android:id="@+id/number"
            android:layout_width="match_parent"
            android:layout_height="227dp"
            android:layout_gravity="center_horizontal"

            android:gravity="center"
            android:text="Number"
            android:textColor="#000000"
            android:textSize="50sp"
            tools:layout_editor_absoluteX="0dp"
            tools:layout_editor_absoluteY="102dp" />
    </LinearLayout>
    <androidx.constraintlayout.widget.ConstraintLayout

        android:layout_width="match_parent"
        android:layout_height="38dp"
        android:layout_marginTop="10dp">

        <TextView
            android:id="@+id/Date_text"
            android:layout_width="50dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="36dp"
            android:layout_marginRight="120dp"
            android:text="@string/Date"
            android:textColor="#000000"
            android:textSize="18sp"
            app:layout_constraintRight_toLeftOf="@+id/hkd"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/Date"
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            app:layout_constraintLeft_toRightOf="@+id/Date_text"
            app:layout_constraintTop_toTopOf="parent"
            android:textColor="#000000"
            />

        <TextView
            android:id="@+id/hkd"
            android:layout_width="40dp"
            android:layout_height="wrap_content"
            android:layout_marginEnd="80dp"
            android:text="CNY"
            android:textSize="18sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            android:textColor="#000000"/>

        <Switch
            android:id="@+id/ai_switch"
            android:layout_width="40dp"
            android:layout_height="28dp"
            android:layout_marginEnd="16dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintLeft_toRightOf="@+id/hkd"
            app:layout_constraintTop_toTopOf="parent" />


    </androidx.constraintlayout.widget.ConstraintLayout>
    <Spinner
        android:id="@+id/times"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="right"
        android:drawSelectorOnTop="true"
        android:textColor="#000000"
        />

    <androidx.constraintlayout.widget.ConstraintLayout

        android:layout_width="match_parent"
        android:layout_height="45dp"
        android:layout_marginTop="15dp">

        <TextView
            android:id="@+id/textView3"
            android:layout_width="150dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="36dp"
            android:layout_marginTop="4dp"
            android:text="@string/XR"
            android:textColor="#000000"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/rate_num"
            android:layout_width="155dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="4dp"
            android:layout_marginEnd="20dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            android:textColor="@color/blue2"

            />

        <ImageView
            android:layout_width="29dp"
            android:layout_height="19dp"
            android:layout_marginBottom="20dp"
            android:src="@drawable/rate"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/textView3" />
    </androidx.constraintlayout.widget.ConstraintLayout>
    <androidx.constraintlayout.widget.ConstraintLayout

        android:layout_width="match_parent"
        android:layout_height="45dp"
        android:layout_marginTop="5dp"
        >

        <TextView
            android:id="@+id/textView2"
            android:layout_width="150dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="36dp"
            android:layout_marginTop="4dp"
            android:text="@string/in"
            android:textColor="#000000"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/in"
            android:layout_width="155dp"
            android:layout_height="wrap_content"
            android:layout_marginEnd="20dp"
            android:layout_marginTop="4dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            android:textColor="@color/red"

             />

        <ImageView
            android:layout_width="29dp"
            android:layout_height="19dp"
            android:layout_marginBottom="20dp"
            android:src="@drawable/in"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/textView2" />

    </androidx.constraintlayout.widget.ConstraintLayout>
    <androidx.constraintlayout.widget.ConstraintLayout

        android:layout_width="match_parent"
        android:layout_height="45dp"
        android:layout_marginTop="5dp">

        <TextView
            android:id="@+id/textView4"
            android:layout_width="150dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="36dp"
            android:layout_marginTop="4dp"
            android:text="@string/out"
            android:textColor="#000000"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/out"
            android:layout_width="155dp"
            android:layout_height="wrap_content"
            android:layout_marginEnd="20dp"
            android:layout_marginTop="4dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            android:textColor="@color/green"

            />

        <ImageView
            android:layout_width="29dp"
            android:layout_height="19dp"
            android:layout_marginBottom="20dp"
            android:src="@drawable/out"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/textView4" />
    </androidx.constraintlayout.widget.ConstraintLayout>
</LinearLayout>

